--- a/calculator.html
+++ b/calculator.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="description" content="JAVA Script Claculator">
 	<meta name="keywords" content="HTML,CSS,JavaScript">
-	<meta name="Gaurav Kumar Rawat" content="calculator code">
+	<meta name="Vivek kumar" content="calculator code">
 	<link rel="stylesheet" type="text/css" href="css/calculator.css">
 </head>
 <body>
